# swell-demo

./: .gitignore  CLAUDE.md  Cert Challenge Rubric.xlsx  README.md  deliverables.md
agent/: .env.example  README.md  langgraph.json  pyproject.toml
agent/evals/: FINDINGS.md  _ragas_compat.py  dataset.yaml  retrieval_dataset.yaml  run_langsmith_eval.py  run_ragas_eval.py
agent/evals/results/: langsmith_results.json  langsmith_results_baseline.json  langsmith_summary.json  langsmith_summary_baseline.json  ragas_deterministic_baseline.json  ragas_results.json  ragas_results_baseline.json  ragas_summary.json  ragas_summary_baseline.json
agent/knowledge-base/two-sum/: edge_cases.yaml  milestones.yaml  problem.yaml  reference_solutions.yaml
agent/swell_agent/: bench_retriever.py  graph.py  hints.py  milestones.py  models.py  nodes.py  retriever.py  schemas.py  state.py  text.py  try_graph.py  web_search.py
fe/: .env.local.example  README.md  eslint.config.js  index.html  next.config.mjs  package-lock.json  package.json  tailwind.config.js
fe/app/: globals.css  layout.js  page.js
fe/app/api/[...path]/: route.js
fe/components/: chat.jsx  workspace.jsx
fe/src/: App.jsx  styles.css
knowledge-base/two-sum/: hints.yaml  problem.yaml
