[project]
name = "swell-agent"
version = "0.1.0"
description = "LangGraph coaching agent for swell, deployed on LangGraph Platform"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-core>=1.2.16",
    "langchain-anthropic>=0.4.0",
    "langchain-openai>=0.3.0",
    "langchain-qdrant>=1.1.0",
    "langchain-tavily>=0.1.0",
    "langgraph>=1.0.10",
    "langgraph-cli>=0.4.14",
    "langgraph-api>=0.4.28",
    "qdrant-client>=1.17.0",
    "pyyaml>=6.0.2",
    "pydantic>=2.0",
    "python-dotenv>=1.2.2",
    "ragas==0.2.15",
    "langsmith>=0.10.2",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["swell_agent*"]
